# fable-model

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/actions/setup-poetry/: action.yml
.github/workflows/: lint.yml  publish.yml  test.yml
fable_model/: __init__.py  broker.py  mask.py  match.py  transform.py
tests/: test_base_to_full_model.py  test_custom_validation.py
