[project]
name = "fable-model"
version = "0.1.6"
description = "Data models for use with a HTTP-based service for privacy-preserving record linkage using Bloom filters."
authors = [
    {name = "Maximilian Jugl"},
    {name = "Paul Brassel", email = "paul.brassel@medizin.uni-leipzig.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.7.0,<3.0.0)"
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["record linkage", "privacy", "bloom filter"]

[project.urls]
repository = "https://github.com/ul-mds/fable-model"

[tool.poetry]
packages = [{ include = "fable_model" }]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test."
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.0"
pytest = ">=8.3.0"
pytest-cov = "^7.1.0"
pre-commit = "^4.6.0"
readme-coverage-badger = "^1.1.0"
