[project]
name = "fable-model"
version = "0.1.6"
description = "Data models utilized in the FABLE ecosystem's HTTP-based PPRL service."
authors = [
    {name = "Maximilian Jugl"},
    {name = "Paul Brassel", email = "paul.brassel@medizin.uni-leipzig.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.7.0,<3.0.0)"
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
keywords = ["record linkage", "privacy", "bloom filter"]

[project.urls]
repository = "https://github.com/ul-mds/fable-model"

[tool.poetry]
packages = [{ include = "fable_model" }]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test."
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.0"
pytest = ">=8.3.0"
pytest-cov = "^7.1.0"
pre-commit = "^4.6.0"
readme-coverage-badger = "^1.1.0"
